2005-09-02  Sven Neumann  <sven@gimp.org>

	* app/dialogs/convert-dialog.c
	* app/dialogs/image-merge-layers-dialog.c
	* app/dialogs/layer-add-mask-dialog.c
	* app/dialogs/offset-dialog.c: use verbs instead of "OK" in the
	confirmative dialog button.

2005-09-02  Sven Neumann  <sven@gimp.org>

	* AUTHORS
	* app/dialogs/authors.h: regenerated.

2005-09-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmpwrite.c
	* plug-ins/common/aa.c
	* plug-ins/common/csource.c
	* plug-ins/common/gbr.c
	* plug-ins/common/gif.c
	* plug-ins/common/gih.c
	* plug-ins/common/gtm.c
	* plug-ins/common/mail.c
	* plug-ins/common/mng.c
	* plug-ins/common/pat.c
	* plug-ins/common/png.c
	* plug-ins/common/pnm.c
	* plug-ins/common/postscript.c
	* plug-ins/common/psp.c
	* plug-ins/common/raw.c
	* plug-ins/common/sunras.c
	* plug-ins/common/svg.c
	* plug-ins/common/tga.c
	* plug-ins/common/tiff.c
	* plug-ins/common/xbm.c
	* plug-ins/common/xpm.c
	* plug-ins/fits/fits.c
	* plug-ins/gfli/gfli.c
	* plug-ins/jpeg/jpeg-save.c
	* plug-ins/script-fu/script-fu-server.c
	* plug-ins/sgi/sgi.c
	* plug-ins/winicon/icodialog.c
	* plug-ins/xjt/xjt.c: use verbs instead of "OK" in the
	confirmative dialog button.

2005-09-02  Tor Lillqvist  <tml@novell.com>

	* authors.xml: Mark people as documenter or artist, based on
	ChangeLogs and other information. Remove translator names, they
	are in the respective .po files.

2005-09-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (load_image)
	* plug-ins/jpeg/jpeg-save.c (save_image): removed tile cache again,
	it doesn't help for the way the plug-in accesses the pixels.

2005-09-01  Sven Neumann  <sven@gimp.org>

	* app/core/gimppalette.[ch]: reverted, it duplicates existing
	functionality.

	* app/core/gimppalette-import.c
	(gimp_palette_import_from_indexed_image): name the colors using
	their index in the colormap.

2005-09-01  Sven Neumann  <sven@gimp.org>

	* app/core/gimppalette.[ch]: added gimp_palette_new_from_colormap().
