@@ -1,3 +1,9 @@
+2005-09-02  Michael Natterer  <mitch@gimp.org>
+
+	* tools/test-clipboard.c (test_clipboard_copy_callback): don't
+	quit the main loop after transferring the data to GTK, it needs a
+	running main loop to get the chunks tranferred to X.
+
 2005-09-02  Sven Neumann  <sven@gimp.org>
 
 	* app/dialogs/convert-dialog.c
